Update tmux configuration
- Use org syntax for headings
- Start using tpm for plugins; add plugin to show when prefix has been
  pressed
- Get rid of unused configuration
- Add key to open scrollback in editor
- Switch to using link-hint.el for opening urls
- Fix url hinting in mutt (markers mess up wrapped urls)

--- a/README.org
+++ b/README.org
@@ -79,7 +79,7 @@ I have no attachment to the Unix philosophy. I care mainly about practicality an
 
 It turns out that, for me, emacs is the best interface for anything text-related from a user and developer standpoint. Standalone programs that aim to be vim-like have to re-implement a modal keybinding system, vim motions, etc., and it's very unlikely that they'll have advanced functionality like fuzzy searching or text objects or be easily programmable. Every application for emacs gets vim functionality for free with evil. Motions, text objects, and operators are always available for navigating and copying text, and modal keybindings can be used for anything. Even for those who dislike modality, emacs offers programmability and many other useful packages. With ivy (or helm) and flx, you can fuzzy search the text of any buffer with immediate, visible context displayed for results. This, of course, applies even if the buffer is not a file on the disk (e.g. an irc buffer or terminal). You can use abbreviations, snippets, and autocompletion anywhere you can type text if you so desire. You can use a package like [[https://github.com/noctuid/link-hint.el][link-hint]] to copy or open links, buttons, file paths, etc. using the home row. Packages like avy, hydra, ivy, and evil can be useful even when you're not editing text but instead reading your mail or chatting on irc or jabber. If you choose to have emacs be your mail client, irc client, mpd client, feed reader, man page viewer, etc., you have a whole ecosystem of functionality that would not otherwise be available.
 
-Some people scoff at the idea of running a terminal in a text editor. Certainly, there are some general ways to get some of the useful functionality I mentioned without re-implementing it across programs. Terminal programs are often keyboard friendly. Consider the vim navigation mode for scrollback and copying provided by some terminals. Tmux's copy mode allows for using vim keys for navigation regardless of the terminal. There are plenty of ways to do "link-hinting" for terminal programs. Zsh has text objects builtin now. You can integrate fasd and fzf with a lot of terminal applications (like ranger). Still, none of this comes close to the functionality available in emacs. How may tui applications provide full, customizable vim keys for navigation and copying? None. Tmux's copy mode is not all that efficient, especially when compared to navigating text with more advanced vim motions and avy (compare to sneak or easymotion). For some types of applications, there aren't even any that allow for sequence keybindings (i.e. I don't know of any standalone feed readers that do). Link-hinting in terminals is often error prone (for urls split across lines) and lacks customizability (e.g. one must use numbers for termite's link opening functionality). Integration with fzf is usually limited to actions on files or directories. On the other hand, many applications in emacs have good integration with helm and ivy. For example, you can use helm to search your emails or to switch to an IRC channel you have open.
+Some people scoff at the idea of running a terminal in a text editor. Certainly, there are some general ways to get some of the useful functionality I mentioned without re-implementing it across programs. Terminal programs are often keyboard friendly. Consider the vim navigation mode for scrollback and copying provided by some terminals. Tmux's copy mode allows for using vim keys for navigation regardless of the terminal. There are plenty of ways to do "link-hinting" for terminal programs. Zsh has text objects builtin now. You can integrate fasd and fzf with a lot of terminal applications (like ranger). Still, none of this comes close to the functionality available in emacs. How may tui applications provide full, customizable vim keys for navigation and copying? None. Tmux's copy mode is not all that efficient, especially when compared to navigating text with more advanced vim motions and avy (compare to sneak or easymotion). For some types of applications, there aren't even any that allow for sequence keybindings (i.e. I don't know of any standalone feed readers that do). Link-hinting in terminals is often error prone (e.g. for urls split across lines) and lacks customizability (e.g. one must use numbers for termite's link opening functionality). For this reason, I'm actually using [[https://github.com/noctuid/link-hint.el#using-for-links-in-terminal-with-tmux][emacs to do this]] even when opening urls outside of emacs. Integration with fzf is usually limited to actions on files or directories. On the other hand, many applications in emacs have good integration with helm and ivy. For example, you can use helm to search your emails or to switch to an IRC channel you have open.
 
 Also consider that emacs has an advantage over most tui programs in that it can nicely display formatted text and images. This isn't to say that I think emacs is always the best for any type of application. I'd never use it as my primary image viewer or browser, but there are some things it does unexpectedly well. Using eww can be great for reading html, and though I was skeptical at first, I've found myself liking pdf-tools more than zathura in some cases. Being able to use bookmarks or helm to get to my recently viewed pdfs is great. Unfortunately, pdfs in emacs aren't text, so you don't get all the features you would get otherwise. There are useful commands like =pdf-occur= though, and the outline menu can help with navigation. While you can't use vim keys to copy text directly, you can open a buffer with the text from the current page iserted and use evil to copy what you want there. In zathura and apvlv, there currently isn't any way at all to use the keyboard to copy text.
 
