Switch to polybar
- Start using zscroll with polybar
- Update rldbspc to use polybar (simplifies things)
- Add dropdown script that checks polybar to find the correct padding
- Remove/move old lemonbar-related things

--- a/README.org
+++ b/README.org
@@ -109,7 +109,7 @@ Here I've organized my thoughts from trying from trying out and choosing various
 | terminal emulator       | termite+tdrop+tmuxinator+tmux (also ansi-term) |
 | launcher                | bemenu                                         |
 | wallpaper setter        | setroot                                        |
-| panel                   | lemonbar-xft                                   |
+| panel                   | polybar (previously lemonbar-xft)               |
 | compositor              | compton                                        |
 | notifications           | dunst                                          |
 | file manager            | ranger                                         |
